--- a/css/style.css
+++ b/css/style.css
@@ -138,5 +138,23 @@ nav .manue a {
 
 
 #about .about-container .about-info{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 30px;
+
+}
+
+.about-info .info-card p{
+     font-size: 20px;
+    font-weight: bold ;
+    color: #757575;
+    line-height: 30px;
+    
+}
+
+.about-info .info-card h4{
+     font-size: 20px;
+    font-weight: bold ;
+    
     
 }
